--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "monitoringtool",
-    "version": "0.0.0",
-    "description": "Multiple Buildpacks App",
-    "author": { "name": "Avaxia" },
+    "version": "1.0.0",
+    "description": "",
+    "author": "",
     "dependencies": {
-        "express": "~4.9.0"
+        "express": "~4.15.2"
     }
 }
