--- a/package.json
+++ b/package.json
@@ -2,8 +2,5 @@
     "name": "monitoringtool",
     "version": "1.0.0",
     "description": "",
-    "author": "",
-    "dependencies": {
-        "express": "~4.15.2"
-    }
+    "author": ""
 }
