--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "gruntfile-gtx": "^0.3.0",
     "http-server": "^0.6.1",
     "require-directory": "^2.0.0"
+  },
+  "engines": {
+    "node": "6.12.0",
+    "npm": "3.10.0"
   }
 }
